<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="team_badge" type="id" />
    <item name="team_name" type="id" />
    <item name="list_prev" type="id" />
    <item name="list_next" type="id" />
    <item name="list_fav" type="id" />
    <item name="list_team" type="id" />
    <item name="viewpager" type="id" />
    <item name="spinner" type="id" />
    <item name="textNamaTim" type="id" />
    <item name="textTahunTim" type="id" />
    <item name="textStadionTim" type="id" />
    <item name="imageTim" type="id" />
    <item name="textOverview" type="id" />
    <item name="player_photo" type="id" />
    <item name="player_name" type="id" />
    <item name="player_position" type="id" />
</resources>