<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/matches"
        android:enabled="true"
        android:icon="@drawable/matches_black_24dp"
        android:title="@string/matches"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/teams"
        android:enabled="true"
        android:icon="@drawable/teams_black_24dp"
        android:title="@string/teams"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favorite"
        android:enabled="true"
        android:icon="@drawable/ic_stars_black_24dp"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />
</menu>